<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dailog">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/testimage"
        android:src="@drawable/warning"
        app:tint="@color/themecolor"
        android:id="@+id/waring"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert"
        android:textSize="32sp"
        android:textStyle="bold"
        android:id="@+id/tsure"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_below="@+id/waring"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_logout"
        android:textSize="16sp"
        android:id="@+id/tconfirm"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:layout_below="@+id/tsure"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tconfirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yes"
            android:textSize="17sp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:background="@drawable/login_button_bg"
            android:text="@string/ok"/>

    </RelativeLayout>
</RelativeLayout>