<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activites.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/dsplogo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change Password"
            android:layout_below="@id/logo"
            android:id="@+id/tvmis"
            android:textStyle="bold"
            android:textColor="@color/themecolor"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvmis"
            android:padding="14dp"
            android:textColorHint="@color/text_light"
            android:inputType="number"
            android:clickable="false"
            android:focusable="false"
            android:id="@+id/etuserid"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:textSize="14sp"
            android:background="@drawable/edittext_border"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etuserid"
            android:padding="14dp"
            android:inputType="textPassword"
            android:textColorHint="@color/text_light"
            android:id="@+id/etcurrpassword"
            android:hint="@string/current_password"
            android:textColor="@color/black"
            android:layout_marginTop="22dp"
            android:textSize="14sp"
            android:maxLength="8"
            android:background="@drawable/edittext_border"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etcurrpassword"
            android:padding="14dp"
            android:inputType="textPassword"
            android:textColorHint="@color/text_light"
            android:id="@+id/etnewpassword"
            android:hint="@string/new_password"
            android:maxLength="8"
            android:textColor="@color/black"
            android:layout_marginTop="22dp"
            android:textSize="14sp"
            android:background="@drawable/edittext_border"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etnewpassword"
            android:padding="14dp"
            android:inputType="textPassword"
            android:textColorHint="@color/text_light"
            android:id="@+id/etretypepassword"
            android:hint="@string/re_type_new_password"
            android:textColor="@color/black"
            android:layout_marginTop="22dp"
            android:textSize="14sp"
            android:maxLength="8"
            android:background="@drawable/edittext_border"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etretypepassword"
            android:id="@+id/rel">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvlogin"
                android:text="@string/change_password"
                android:padding="14dp"
                android:background="@drawable/login_button_bg"
                android:layout_marginTop="22dp"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvadduser"
                android:text="Add User"
                android:padding="14dp"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAllCaps="true"
                android:background="@drawable/login_button_bg"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_below="@id/tvlogin"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvalter"
            android:text="@string/new_password_must_be_alpha_numeric_abcd1234_password_minimum_length_is_8_characters"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:animation="@anim/fade_in"
            android:textColor="@color/dark_red"
            android:layout_below="@id/rel"/>

    </RelativeLayout>
</ScrollView>