<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/v1"
        android:layout_alignParentTop="true"
        android:background="@color/black"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/li2"
            android:layout_below="@+id/v1"
            android:orientation="horizontal">
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:background="@color/black"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:id="@+id/tvdate"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:textSize="12sp" />
            </RelativeLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:layout_toEndOf="@+id/tvdate"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/in"
                    android:id="@+id/tvin"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:textSize="12sp" />


            </RelativeLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:id="@+id/v3"
                android:background="@color/black"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/out"
                    android:id="@+id/tvout"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:textSize="12sp" />


            </RelativeLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>

        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/li2"
        android:background="@color/black"/>


    </RelativeLayout>
</ScrollView>